added extra boolean in GetSetField to determine a List origin for the getter/setter. Fix equality in MLVImpl. Be more strict in FieldAnalyzerImpl